<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:contentDescription="@string/homeFragmentBannerDescription"
                android:layout_width="match_parent"
                android:layout_height="@dimen/home_banner_height"
                android:scaleType="centerCrop"
                android:src="@mipmap/sanfran" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/box_1"
                    style="@style/FragmentHomeBoxes"
                    android:background="@android:color/holo_orange_light"
                    android:text="@string/home_box_1" />

                <TextView
                    android:id="@+id/box_2"
                    style="@style/FragmentHomeBoxes"
                    android:background="@android:color/holo_blue_dark"
                    android:text="@string/home_box_2" />

                <TextView
                    android:id="@+id/box_3"
                    style="@style/FragmentHomeBoxes"
                    android:background="@android:color/holo_green_light"
                    android:text="@string/home_box_3" />

                <TextView
                    android:id="@+id/box_4"
                    style="@style/FragmentHomeBoxes"
                    android:background="@android:color/holo_purple"
                    android:text="@string/home_box_4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/home_section_1_text_view"
                    android:textColor="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:contentDescription="@string/HomeFragmentImageOneDescription"
                        android:id="@+id/guide_image_view_1"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="@mipmap/nomadicmatt" />

                    <ImageView
                        android:contentDescription="@string/HomeFragmentImageTwoDescription"
                        android:id="@+id/guide_image_view_2"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_margin="8dp"
                        android:layout_weight=".4"
                        android:background="@mipmap/sftravel" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:gravity="end"
                    android:text="@string/home_section_2_text_view"
                    android:textColor="@android:color/darker_gray" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:contentDescription="@string/HomeFragmentImageThreeDescription"
                        android:id="@+id/guide_image_view_3"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="@mipmap/infatuation" />

                    <ImageView
                        android:contentDescription="@string/HomeFragmentImageFourDescription"
                        android:id="@+id/guide_image_view_4"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:background="@mipmap/eater"
                        android:scaleType="centerCrop" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

</ScrollView>